--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Lịch Giáo xứ Chi Lăng",
+    "name": "Lịch Giáo họ TRại Hầm",
     "short_name": "LịchCG",
     "start_url": "./CalendarGhTraiham.html",
     "display": "standalone",
